--- a/guestbook/ui-deployment.yaml
+++ b/guestbook/ui-deployment.yaml
@@ -9,12 +9,12 @@ spec:
     matchLabels:
       app: guestbook-ui
   template:
-    matadata:
+    metadata:
       labels:
         app: guestbook-ui
-      spec:
-        containers:
-        - image: gcr.io/heptio-images/ks-guestbook-demo:0.2
-          name: guestbook-ui
-          ports:
-          - containerPort: 80
+    spec:
+      containers:
+      - image: gcr.io/heptio-images/ks-guestbook-demo:0.2
+        name: guestbook-ui
+        ports:
+        - containerPort: 80
